--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 html, body {
     height: 100%; /* Assure que le body prend toute la hauteur de la fenêtre */
     margin: 0;
@@ -45,26 +47,28 @@ html, body {
     margin: 0 10px; /* Espace entre les liens */
 }
 .profile-container {
-    display: flex;
-    align-items: center;
-    position: absolute; /* ou fixed */
-    top: 1.5rem; /* Position en haut de la page */
-    right: 1rem; /* Position à droite de la page */
+  display: flex;
+  align-items: center;
+  position: absolute; /* ou fixed */
+  top: 1.5rem; /* Position en haut de la page */
+  right: 1rem; /* Position à droite de la page */
 }
-
 .profile-photo {
-    width: 30px; /* Taille de la photo de profil */
-    height: 30px;
-    border-radius: 50%; /* Pour la rendre ronde */
-    margin-right: 10px;
+  width: 40px; /* Taille de la photo de profil */
+  height: 40px;
+  border-radius: 50%; /* Pour la rendre ronde */
+  margin-right: 10px;
+}
+header a.header-l:hover,
+header a.header-d:hover {
+    font-weight: bold;
+    color: #FCA311; /* Exemple : changer la couleur du texte au bleu */
+    cursor: pointer; /* Changer le curseur pour indiquer que c'est cliquable */
 }
 
-.container-photo {
-    transform: scale(0.5); /* Agrandit l'image de 10 % */    
-    width: 700px;
-    height: 700px;
-    border-radius: 1rem;
-    border: solid 2px #fca311;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-
+header a.header-l,
+header a.header-d {
+    text-decoration: none; /* Pas de soulignement par défaut */
+    transition: color 0.3s ease-in-out; /* Animation douce de la couleur */
 }
+
