--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -49,7 +49,7 @@ a {
 .button {
        width: 15rem; /* Exemple de largeur fixe */
        padding: 10px;
-       background-color: #14213D;
+       background-color: #FCA311;
        color: white;
        border: none;
        border-radius: 4px;
@@ -61,8 +61,8 @@ a {
    }
    
 .button:hover {
-       background-color: #24407d;
-   }   
+  background-color: #9a640d;
+}   
 
 
 
