--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,8 @@ html, body {
 header a.header-l:hover,
 header a.header-d:hover {
     font-weight: bold;
-    color: #FCA311; /* Exemple : changer la couleur du texte au bleu */
-    cursor: pointer; /* Changer le curseur pour indiquer que c'est cliquable */
+    color: #FCA311;
+    cursor: pointer;
 }
 
 header a.header-l,
