--- a/M2L/public/css/index.css
+++ b/M2L/public/css/index.css
@@ -1,21 +1,37 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  
 main {
-        align-items: center;
-        font-family: 'Quicksand', sans-serif;
-        display: flex;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-        background-color: #f0f0f0; /* Couleur de fond */
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #21262d;
+    height: 100%;
+    background: 
+      linear-gradient(rgba(0, 106, 255, 0.2), rgba(255, 102, 0, 0.2)),
+      url('https://i.postimg.cc/HYKWZ7Lk/abstract-background-concept-23-2148557836.jpg') no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
+  }
 main h1 {
     font-size: 16px;
 }
 .container {
-    width: 400px;
-    padding: 40px;
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    max-height: 550px;
+    padding: 3rem;
+    border-radius: 25px;
     background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow:
+    0 25px 50px rgba(0, 0, 0, 0.7),
+    0 0 0 1px rgba(255, 255, 255, 0.1);    
+    border: 2px solid rgb(255, 149, 0);
 }
 
 input[type="email"],
@@ -46,3 +62,4 @@ a {
 .button:hover {
     background-color: #9a640d;
 }   
+
